--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.2.2",
     "core-js": "^3.4.4",
+    "smooth-scrollbar": "^8.5.1",
+    "swiper": "^5.3.0",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue-awesome-swiper": "^3.1.3",
+    "vue-navigation-bar": "^2.0.0",
+    "vue-router": "^3.1.3",
+    "vue-smooth-scrollbar": "^0.1.2",
+    "vuescroll": "^4.14.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
