--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/vue-fontawesome": "^0.1.9",
+    "@hiendv/vue-tabs": "^0.3.7",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.2.2",
     "core-js": "^3.4.4",
@@ -25,6 +26,7 @@
     "vue-router": "^3.1.3",
     "vue-sidebar-menu": "^4.5.1",
     "vue-smooth-scrollbar": "^0.1.2",
+    "vue-tabs": "^0.3.1",
     "vuescroll": "^4.14.4"
   },
   "devDependencies": {
