--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-router": "^3.1.3",
     "vue-sidebar-menu": "^4.5.1",
     "vue-smooth-scrollbar": "^0.1.2",
+    "vue-stripe-menu": "^1.2.7",
     "vue-tabs": "^0.3.1",
     "vue-yandex-maps": "^0.10.6",
     "vuescroll": "^4.14.4"
@@ -40,7 +41,8 @@
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-svg-loader": "^0.16.0",
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
