--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
     "vue-fixed-header": "^3.2.14",
+    "vue-masked-input": "^0.5.2",
     "vue-navigation-bar": "^2.0.0",
     "vue-router": "^3.1.3",
     "vue-sidebar-menu": "^4.5.1",
@@ -29,6 +30,7 @@
     "vue-stripe-menu": "^1.2.7",
     "vue-tabs": "^0.3.1",
     "vue-yandex-maps": "^0.10.6",
+    "vuelidate": "^0.7.5",
     "vuescroll": "^4.14.4"
   },
   "devDependencies": {
@@ -53,7 +55,9 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "no-console": "off"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
